Fixed project page seperator not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ footer a:hover {
 }
 /*education section*/
 .intro-education {
-  background-color: #b8cbe3;
+  background-color: #90b6d8;
   color: black;
   padding-top: 50px;
   padding-bottom: 50px;
